fix - hide scrollbar or stop scrolling when modal is open

--- a/assets/css/kulArtist.css
+++ b/assets/css/kulArtist.css
@@ -9,13 +9,12 @@
 
 html,
 body {
-  /* height: 100%; */
   width: 100%;
   background: #fff;
   font-family: "raleway-bold";
   background-color: #fff !important;
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 /*##########################*/
@@ -535,11 +534,14 @@ body {
 /*##########################*/
 /*Modal CSS*/
 /*##########################*/
-
+.modal-open {
+  overflow: hidden !important;
+}
 .modal-image {
   max-height: 400px;
   width: 100%;
   height: auto;
+  border-radius: 14px 14px 0px 0px;
 }
 
 .modal-heading {
